--- a/cargador.html
+++ b/cargador.html
@@ -9,6 +9,8 @@
 <body>
     <script src="random.js"></script>
     <script src="superheroes.js"></script>
-    <script src="ej05.js"></script>
+    <script src="personas.js"></script>
+    <script src="sistemaSolar.js"></script>
+    <script src="ej07.js"></script>
 </body>
 </html>
